[package]
name = "t"
version = "0.1.0"
authors = ["Trent Lillehaugen <tllilleh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.9.6"
clap = "2.33"
